# PACSProject

./: CMakeLists.txt  README.md  benchmark_formats.py  convert_csv_to_npy.py  data_loader_npy.py  evaluate.py  requirements.txt  test_amg.py  train.py  train_cnn_log.txt  train_gat_log.txt  train_log.txt  train_stage1.py  train_stage1_npy.py  train_stage2.py  train_unified.py  val.py
data/: __init__.py  cnn_data_processing.py  data_processing.py  gat_data_processing.py  gnn_data_processing.py  unified_data_processing.py
include/: AMGOperators.hpp  BatchNPYWriter.hpp  DiffusionModel.hpp  ElasticModel.hpp  GraphLaplacianModel.hpp  GraphLaplacianModelEigen.hpp  NPYWriter.hpp  NPZWriter.hpp  Pooling.hpp  StokesModel.hpp  UnifiedDataGenerator.hpp
logs/D_stage1_cnn/: D_stage1_cnn.json
logs/D_stage1_gnn/: D_stage1_gnn.json
logs/D_stage2_pvalue_/: D_stage2_pvalue.json
logs/D_stage2_pvalue_twogird/: D_stage2_pvalue_twogrid.json
logs/GL_stage1_cnn/: GL_stage1_cnn.json
logs/GL_stage1_gnn/: GL_stage1_gnn.json
logs/GL_stage2_pvalue/: GL_stage2_pvalue.json
model/: __init__.py  cnn_model.py  gat_model.py  gnn_model.py  graph_net_model.py  unified_model.py
results/: evaluation_20260209_012748.json  evaluation_20260209_012925.json  evaluation_20260209_013035.json  evaluation_20260209_013224.json  evaluation_20260209_013526.json  evaluation_20260209_013648.json
src/: DiffusionModel.cpp  GAT.py  data_processing.py  gat_model.py  generate_amg_data.cpp  generate_production_data.cpp  generate_unified_data.cpp  generate_unified_data_test.cpp  generate_xlarge_data.cpp  main.cpp  main.py
utils/: __init__.py  amg_utils.py  multigrid_utils.py  training_utils.py
weights/: cnn_amg_model1_epoch10.pth  cnn_amg_model1_epoch15.pth  cnn_amg_model1_epoch20.pth  cnn_amg_model1_epoch25.pth  cnn_amg_model1_epoch30.pth  cnn_amg_model1_epoch35.pth  cnn_amg_model1_epoch40.pth  cnn_amg_model1_epoch45.pth  cnn_amg_model1_epoch5.pth  cnn_amg_model1_epoch50.pth  cnn_amg_model2_epoch10.pth  cnn_amg_model2_epoch15.pth  cnn_amg_model2_epoch20.pth  cnn_amg_model2_epoch25.pth  cnn_amg_model2_epoch30.pth  cnn_amg_model2_epoch35.pth  cnn_amg_model2_epoch40.pth  cnn_amg_model2_epoch45.pth  cnn_amg_model2_epoch5.pth  cnn_amg_model2_epoch50.pth  cnn_amg_model3_epoch10.pth  cnn_amg_model3_epoch15.pth  cnn_amg_model3_epoch20.pth  cnn_amg_model3_epoch25.pth  cnn_amg_model3_epoch30.pth  cnn_amg_model3_epoch35.pth  cnn_amg_model3_epoch40.pth  cnn_amg_model3_epoch45.pth  cnn_amg_model3_epoch5.pth  cnn_amg_model3_epoch50.pth  cnn_amg_model_epoch10.pth  cnn_amg_model_epoch15.pth  cnn_amg_model_epoch20.pth  cnn_amg_model_epoch25.pth  cnn_amg_model_epoch30.pth  cnn_amg_model_epoch35.pth  cnn_amg_model_epoch40.pth  cnn_amg_model_epoch45.pth  cnn_amg_model_epoch5.pth  cnn_amg_model_epoch50.pth  (+30 more)
